fix code smells 2